# ufid_reader

./: .gitignore  ufid_reader-main.sln
Database/: README.txt  docker-compose.yml
Database/data/: courses.sql  exams.sql
Team1Work_Historical/src/: setup.py
UFIDReader/: README.txt  start
UFIDReader/Config/: requirements.txt
UFIDReader/src/: main.py  main2.py  setup.py
UFIDReader/src/MyApp/: App.axaml  MainWindow.axaml  MainWindow.axaml.cs  MyAvaloniaApp.csproj
UFIDWebApp/IN_PROGRESS_WORK/backend/: README.md  pyproject.toml  run_app.py
UFIDWebApp/IN_PROGRESS_WORK/backend/app/: crud.py  main.py  models.py
UFIDWebApp/IN_PROGRESS_WORK/backend/app/api/: deps.py  router.py
UFIDWebApp/IN_PROGRESS_WORK/backend/app/api/routes/: login.py  students.py  users.py
UFIDWebApp/IN_PROGRESS_WORK/backend/app/core/: config.py  db.py  security.py
UFIDWebApp/IN_PROGRESS_WORK/backend/app/data/: exams_2248.db  test.db
UFIDWebApp/api/: courseFetch.py
UFIDWebApp/templates/: test_courses.html
