[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi>=0.115.7",
    "jinja2>=3.1.5",
    "jwt>=1.3.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]
